Version 1.11.7+dev:
 * AI:
   * RCA AI: fix bug #21334: surrounded units don't attack
   * Simple Attack Micro AI: new optional parameter weapon=
   * Lua AI: new replay-safe action ai.synced_command()
 * Campaigns:
   * Dead Water:
     * New world map.
   * Eastern Invasion:
     * Made Dacyn use teal TC and Mal-Ravanal blue TC, to make them fit the
       portraits more.
   * Heir To The Throne:
     * Implemented the portrait variations for Delfador and Asheviere.
     * Changed Kaylan's portrait and gave him teal team coloring.
     * Changed the flaming sword so it's now a 25% increase to damage, instead
       of changing the damage to 15-4
     * Added a new mechanic to Sceptre of Fire. By standing still for a turn,
       Delfador can now tell the player the shortest path to the Sceptre.
     * Fixed Konrad's level 1's attack animation giving an 'image not found'
       error.
   * Liberty:
     * New world map.
   * Son of the Black Eye:
     * Rebalancing of the campaign continues and is mostly done for Scenarios 1
       (End of Peace) through 8 (Silent Forest).  In addition, the following
       not directly balance related changes have also been made:
     * S1: the AI enemy can now also recruit bowmen
     * S4: give the player control of the Side 3 orcs in the center castle
     * S6: unload units from transport galleons preferentially onto land hexes
     * S7: use Simple Attack Micro AI to have scorpions spread poison
     * S8: use Healer Support Micro AI for elvish healers
     * S16: Kapou'e gets his own castle at the start of the scenario to
       eliminate dependence on luck during the first turn
     * S17: add a warning that the AI will receive reinforcements
     * S18: no linger mode at the end of the last scenario
     * Minor updates to messages (grammar and prose) and objectives
 * Graphics:
   * New and updated animations for the Loyalist Horseman.
 * Language and i18n: