@@ -2,6 +2,7 @@ Version 1.11.7+dev:
  * AI:
    * RCA AI: fix bug #21334: surrounded units don't attack
    * Simple Attack Micro AI: new optional parameter weapon=
+   * Wolves Micro AI: fix bug that sometimes kept predators from attacking
    * Lua AI: new replay-safe action ai.synced_command()
  * Campaigns:
    * Dead Water:
